--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,8 +18,9 @@ jobs:
           plugin_isocalendar: yes
           plugin_isocalendar_duration: full-year # Display full year instead of half year
           plugin_languages: yes
+          plugin_languages_ignored: html, css                           # Ignore html and css as languages
           plugin_languages_details: bytes-size, percentage              # Additionally display total bytes size and percentage
           plugin_la nguages_threshold: 2%                               # Hides all languages less than 2%
-          plugin_languages_limit: 8                                     # Display up to 8 languages
-          plugin_languages_sections: most-used, recently-used           # Display most used and recently used languages stats
+          plugin_languages_limit: 4                                     # Display up to 8 languages
+          plugin_languages_sections: most-used                          # Display most used languages stats
           plugin_languages_indepth: no                                  # Get indepth stats (see documentation before enabling)
