--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: Metrics
 on:
-  # Schedule updates (each hour)
-  schedule: [{cron: "0 * * * *"}]
+  # Schedule updates (end of every day)
+  schedule: [{cron: "0 0 * * *"}]
   # Lines below let you run workflow manually and on each commit (optional)
   workflow_dispatch:
   push: {branches: ["master", "main"]}
@@ -19,7 +19,7 @@ jobs:
           plugin_isocalendar_duration: full-year # Display full year instead of half year
           plugin_languages: yes
           plugin_languages_ignored: html, css                           # Ignore html and css as languages
-          plugin_languages_details: bytes-size, percentage              # Additionally display total bytes size and percentage
+          plugin_languages_details: percentage                          # Additionally display total bytes size and percentage
           plugin_la nguages_threshold: 2%                               # Hides all languages less than 2%
           plugin_languages_limit: 4                                     # Display up to 8 languages
           plugin_languages_sections: most-used                          # Display most used languages stats
